--- a/style.css
+++ b/style.css
@@ -126,16 +126,7 @@ header .navbar li a:hover{
     background: #ffffd5;
 }
 
-button {
-    padding: 1em 1.2em;
-    background: #9b7239;
-    color: white;
-    font-size: 20px;
-    border-radius: .3em;
-    border: none;
-    border-bottom: 4px solid #aa4b72;
-    cursor: pointer;
-  }
+
 
   a {
     padding: 10px;
@@ -147,3 +138,31 @@ button {
     font-family: sans-serif;
     background-color: #C3A6A0;
   }
+
+  img.logo{
+    max-width: 20%;
+max-height: 20%;
+background-color: transparent;
+  }
+
+
+button {
+    padding: 10px 20px; 
+    font-size: 16px; /
+    background-color: #4CAF50; 
+    color: orange; 
+    border: none; /
+    border-radius: 4px; 
+    cursor: pointer; 
+    transition: background-color 0.3s; 
+}
+
+
+button:hover {
+    background-color: #45a049; 
+}
+
+
+button:active {
+    background-color: #367B37; 
+}
